# tea

./: .gitignore  .travis.yml  CONTRIBUTING.md  CONTRIBUTORS.md  Cargo.toml  README.md  rustfmt.toml  todo.org
src/: app.rs  buffer.rs  fs.rs  main.rs  state.rs  stream.rs
src/lib/tea_core/: Cargo.toml
src/lib/tea_core/src/: app.rs  buffer.rs  fs.rs  lib.rs  state.rs
src/lib/tea_core/src/interaction/: cli.rs  ed.rs  event.rs  event_handler.rs  handler.rs  input_parser.rs  input_stream.rs  interface.rs  mod.rs
src/lib/tea_functional/: Cargo.toml
src/lib/tea_functional/src/: either.rs  identity.rs  lib.rs  state.rs  stream.rs
src/lib/tea_functional/src/tests/: either.rs  identity.rs  mod.rs  state.rs  stream.rs  void.rs
src/lib/tea_structures/: Cargo.toml
src/lib/tea_structures/src/: lib.rs  trie.rs
src/lib/tea_structures/src/functional/: either.rs  mod.rs  pipe.rs  void.rs
src/ui/: graphics.rs  mod.rs  text.rs  window.rs
src/ui/shaders/: basic.glslf  basic.glslv
