[package]
name = "tea"
version = "0.1.0"
authors = ["zovt <zovt@posteo.de>"]

[dependencies]
freetype = "0.2.0"

gfx = "0.16.0"
gfx_window_glutin = "0.16.0"
gfx_device_gl = "0.14.1"
glutin = "0.8.1"

clippy = {version="*", optional=true}

[dependencies.harfbuzz-sys]
git = "https://github.com/zovt/rust-harfbuzz"

[features]
default = []